# LanChat

./: README.md
LanChat/: CMakeLists.txt  LanChat.pro  addfriend.cpp  addfriend.h  addfriend.ui  addverification.cpp  addverification.h  addverification.ui  chatmessagedelegate.cpp  chatmessagedelegate.h  friendsdetails.cpp  friendsdetails.h  friendsitemdelegate.cpp  friendsitemdelegate.h  friendsrequest.cpp  friendsrequest.h  friendsrequestitemdelegate.cpp  friendsrequestitemdelegate.h  images.qrc  login.cpp  login.h  login.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  messageitemdelegate.cpp  messageitemdelegate.h  nonclickablechatmodel.cpp  nonclickablechatmodel.h  signup.cpp  signup.h  signup.ui  userprofile.cpp  userprofile.h  userprofile.ui
LanChat/images/qss/: AddFriendWeight.qss  LoginWeight.qss  MainWeight.qss  UserProFile.qss
LanServer/: CMakeLists.txt  main.cpp
build-LanChat-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_login.h  ui_mainwidget.h
build-LanChat-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_login.cpp  moc_mainwidget.cpp
